test/error/iface/errHfsm2.rzy

ErrHfsm2 = Hfsm
  funcA : slot();
  funcB : slot();

  state(One)
    One : state;
    One to One by funcA();
    One to One by funcB();
    One to One by funcC();
  end
end

